Styling overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* computer versie */
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
